# habix

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: auth.rs  cli.rs  errors.rs  main.rs  notifications.rs  tasks.rs
