[package]
name = "habix"
version = "0.1.0"
edition = "2021"
authors = ["Habix <wmouton@protonmail.com>"]
description = "Habix is a command-line tool that fetches pending tasks from Habitica and sends desktop notifications."
documentation = "https://github.com/wmouton/habix"
readme = "README.md"
repository = "https://github.com/wmouton/habix"
license = "GPL-3.0"
keywords = ["rust", "cli", "habix", "nix", "habit"]
categories = ["command-line-utilities"]
homepage = "https://github.com/wmouton/habix"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0" # Added for custom error handling
